--- a/DMEE View1/DMEE View1.csproj
+++ b/DMEE View1/DMEE View1.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{3089E547-5890-4F7C-81CC-21E9BA60BA3F}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>LineDrawTest</RootNamespace>
-    <AssemblyName>LineDrawTest</AssemblyName>
+    <RootNamespace>DMEEView1</RootNamespace>
+    <AssemblyName>DMEEView1</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -66,6 +66,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
