--- a/DMEE View1/App.config
+++ b/DMEE View1/App.config
@@ -2,6 +2,7 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="DMEEView1.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="LineDrawTest.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
@@ -9,6 +10,20 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
     <userSettings>
+        <DMEEView1.Properties.Settings>
+            <setting name="FNAME" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="ShowInfo" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="LibFolder" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="WorkFolder" serializeAs="String">
+                <value />
+            </setting>
+        </DMEEView1.Properties.Settings>
         <LineDrawTest.Properties.Settings>
             <setting name="FNAME" serializeAs="String">
                 <value />
