fix bug in file open

--- a/DMEE View1/App.config
+++ b/DMEE View1/App.config
@@ -11,7 +11,7 @@
     </startup>
     <userSettings>
         <DMEEView1.Properties.Settings>
-            <setting name="FNAME" serializeAs="String">
+            <setting name="fileName" serializeAs="String">
                 <value />
             </setting>
             <setting name="ShowInfo" serializeAs="String">
@@ -21,6 +21,9 @@
                 <value />
             </setting>
             <setting name="WorkFolder" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="fileFolder" serializeAs="String">
                 <value />
             </setting>
         </DMEEView1.Properties.Settings>
