Cleanup of unnecessary operations and work on printing infrastructure. Also implemented multi-pass through moduleList for bounds determination.

--- a/DMEE View1/App.config
+++ b/DMEE View1/App.config
@@ -26,6 +26,12 @@
             <setting name="fileFolder" serializeAs="String">
                 <value />
             </setting>
+            <setting name="margins" serializeAs="String">
+                <value>25, 25, 25, 25</value>
+            </setting>
+            <setting name="landscape" serializeAs="String">
+                <value>True</value>
+            </setting>
         </DMEEView1.Properties.Settings>
         <LineDrawTest.Properties.Settings>
             <setting name="FNAME" serializeAs="String">
