Adding support for drawing various elements in color

--- a/DMEE View1/App.config
+++ b/DMEE View1/App.config
@@ -32,6 +32,18 @@
             <setting name="landscape" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="pinsColor" serializeAs="String">
+                <value>Black</value>
+            </setting>
+            <setting name="textColor" serializeAs="String">
+                <value>Black</value>
+            </setting>
+            <setting name="linesColor" serializeAs="String">
+                <value>Black</value>
+            </setting>
+            <setting name="wiresColor" serializeAs="String">
+                <value>Black</value>
+            </setting>
         </DMEEView1.Properties.Settings>
         <LineDrawTest.Properties.Settings>
             <setting name="FNAME" serializeAs="String">
