Added support for drawing various elements (lines, wires, text...) in color. Renamed color properties in Dc command classes to "layer" since it appears layer is the more correct name and use.

--- a/DMEE View1/App.config
+++ b/DMEE View1/App.config
@@ -44,6 +44,12 @@
             <setting name="wiresColor" serializeAs="String">
                 <value>Black</value>
             </setting>
+            <setting name="showPins" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="blackAndWhite" serializeAs="String">
+                <value>False</value>
+            </setting>
         </DMEEView1.Properties.Settings>
         <LineDrawTest.Properties.Settings>
             <setting name="FNAME" serializeAs="String">
