--- a/DMEE View1/Properties/Settings.settings
+++ b/DMEE View1/Properties/Settings.settings
@@ -38,5 +38,11 @@
     <Setting Name="wiresColor" Type="System.Drawing.Color" Scope="User">
       <Value Profile="(Default)">Black</Value>
     </Setting>
+    <Setting Name="showPins" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="blackAndWhite" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
