--- a/DMEE View1/DMEE View1.csproj
+++ b/DMEE View1/DMEE View1.csproj
@@ -64,6 +64,12 @@
     <Compile Include="FolderConfigForm.Designer.cs">
       <DependentUpon>FolderConfigForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="PrintSetupForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PrintSetupForm.Designer.cs">
+      <DependentUpon>PrintSetupForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
@@ -75,6 +81,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FolderConfigForm.resx">
       <DependentUpon>FolderConfigForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PrintSetupForm.resx">
+      <DependentUpon>PrintSetupForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
