Cleaning up code organization. Moving "generic" Dc command class definitions into a separate DcClasses file. Continued work on updated print setup.

--- a/DMEE View1/DMEE View1.csproj
+++ b/DMEE View1/DMEE View1.csproj
@@ -52,6 +52,7 @@
     <Compile Include="ColorConfigForm.Designer.cs">
       <DependentUpon>ColorConfigForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="DcClasses.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
