More work on print setup and preview

--- a/DMEE View1/App.config
+++ b/DMEE View1/App.config
@@ -50,6 +50,9 @@
             <setting name="blackAndWhite" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="PrinterName" serializeAs="String">
+                <value />
+            </setting>
         </DMEEView1.Properties.Settings>
         <LineDrawTest.Properties.Settings>
             <setting name="FNAME" serializeAs="String">
