--- a/DMEE View1/Properties/Settings.settings
+++ b/DMEE View1/Properties/Settings.settings
@@ -44,5 +44,8 @@
     <Setting Name="blackAndWhite" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="PrinterName" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
