More updates to print setup form handling. Mostly to handle loading and updating saved settings.

--- a/DMEE View1/App.config
+++ b/DMEE View1/App.config
@@ -26,7 +26,7 @@
             <setting name="fileFolder" serializeAs="String">
                 <value />
             </setting>
-            <setting name="margins" serializeAs="String">
+            <setting name="Print_Margins" serializeAs="String">
                 <value>25, 25, 25, 25</value>
             </setting>
             <setting name="landscape" serializeAs="String">
@@ -47,11 +47,14 @@
             <setting name="showPins" serializeAs="String">
                 <value>True</value>
             </setting>
-            <setting name="blackAndWhite" serializeAs="String">
+            <setting name="Print_in_color" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="PrinterName" serializeAs="String">
+            <setting name="Printer_Name" serializeAs="String">
                 <value />
+            </setting>
+            <setting name="Draw_in_color" serializeAs="String">
+                <value>False</value>
             </setting>
         </DMEEView1.Properties.Settings>
         <LineDrawTest.Properties.Settings>
