Updated to apply settings from print setup form to the print routine. Backed out code related to shifting the drawing location in the print page using the mouse.

--- a/DMEE View1/App.config
+++ b/DMEE View1/App.config
@@ -56,6 +56,9 @@
             <setting name="Draw_in_color" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="PrintFitToPage" serializeAs="String">
+                <value>False</value>
+            </setting>
         </DMEEView1.Properties.Settings>
         <LineDrawTest.Properties.Settings>
             <setting name="FNAME" serializeAs="String">
