--- a/DMEE View1/Properties/Settings.settings
+++ b/DMEE View1/Properties/Settings.settings
@@ -50,5 +50,8 @@
     <Setting Name="Draw_in_color" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="PrintFitToPage" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
